--- a/style.css
+++ b/style.css
@@ -1,10 +1,16 @@
+
 body{
 	background-color: burlywood;
 }
+
 #htext{
 	font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 	font-weight: 300;
 	display: block;
 text-align: center;
 color: rgb(94, 8, 82);
+}
+#img{
+	size: 20px;
+	border: 3px 5px 3px;
 }
